--- a/docs/src/_config.yml
+++ b/docs/src/_config.yml
@@ -26,7 +26,7 @@ url: "https://bryxli.github.io" # the base hostname & protocol for your site, e.
 
 
 # Build settings
-theme: minima
+# theme: minima
 remote_theme: pages-themes/architect@v0.2.0
 plugins:
   - jekyll-feed
