--- a/docs/public/manifest.json
+++ b/docs/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "zoe",
+  "name": "Zoe Bot",
   "icons": [
     {
       "src": "favicon.ico",
