--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
-    "start-backend": "cd ../backend && env/Scripts/flask run --no-debugger"
+    "start-backend": "cd ../backend && env/Scripts/flask run --no-debugger",
+    "star-backen-linux": "cd../backend && env/bin/flask run --no-debugger"
   },
   "eslintConfig": {
     "extends": [
