--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build",
-    "start-backend": "cd ../backend && env/Scripts/flask run --no-debugger",
-    "start-backend-linux": "cd ../backend && env/bin/flask run --no-debugger"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
@@ -42,9 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
-  },
-  "homepage": "https://bryxli.github.io/zoe-bot/",
   "proxy": "http://localhost:5000"
 }
