--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,4 +6,5 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 EXPOSE 5000
 COPY . .
+COPY database/database.db .
 CMD ["flask", "run"]
