--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,16 @@
 services:
+  db:
+    container_name: data
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: 123
+      MYSQL_ROOT_HOST: '%'
   backend:
+    container_name: backend
+    links:
+      - "db"
     build: ./backend
     ports:
       - "8000:5000"
