--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,5 @@
-Flask==2.2.2
-Flask-Cors==3.0.10
-mysql-connector-python==8.0.31
+discord.py==2.0.1
+mysql-connector==2.2.9
+quart==0.18.3
+quart_cors==0.5.0
+riotwatcher==3.2.3
