--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,21 @@ services:
     ports:
       - "3306:3306"
     environment:
+      MYSQL_DATABASE: 'db'
       MYSQL_ROOT_PASSWORD: 123
-      MYSQL_ROOT_HOST: '%'
+    expose:
+      - "3306"
   backend:
     container_name: backend
+    depends_on:
+      - "db"
     links:
       - "db"
     build: ./backend
     ports:
       - "8000:5000"
   frontend:
+    container_name: frontend
     build: ./frontend
     ports:
       - "3000:3000"
