--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,10 @@
-FROM node:latest
+FROM node:latest as build
 WORKDIR /app
-ENV PATH /app/node_modules/.bin:$PATH
-COPY package.json .
-COPY yarn.lock .
-RUN yarn
-EXPOSE 3000
 COPY . .
-CMD ["yarn", "start"]
+RUN yarn && yarn build
+
+FROM nginx:alpine
+COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
