--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,9 @@ services:
     build: ./frontend
     ports:
       - "80:80"
+    volumes:
+      - node_modules:/app/node_modules
     image: bryxli/zoe-frontend
 volumes:
   mysql-data:
+  node_modules:
