--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+*.js
+!jest.config.js
+*.d.ts
+node_modules
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
+
 .venv
 config.json
 __pycache__
-cdk.out
