--- a/upload_commands/discord_commands.yaml
+++ b/upload_commands/discord_commands.yaml
@@ -1,6 +1,20 @@
 - name: help
   description: command list
 
+- name: setup
+  description: create guild instance
+
+- name: reset
+  description: reset instance
+
+- name: region
+  description: change guild region
+  options:
+    - name: region
+      description: server region
+      type: 3
+      required: true
+
 - name: adduser
   description: add user to guild, user must be a valid League of Legends username
   options:
@@ -8,3 +22,17 @@
       description: League of Legends username
       type: 3
       required: true
+
+- name: deluser
+  description: deletes user from guild, user must be a valid League of Legends username and exist
+  options:
+    - name: username
+      description: League of Legends username
+      type: 3
+      required: true
+
+- name: userlist
+  description: display guild userlist
+
+- name: speak
+  description: zoe will talk to you
