--- a/upload_commands/discord_commands.yaml
+++ b/upload_commands/discord_commands.yaml
@@ -13,7 +13,7 @@
     - name: region
       description: server region
       type: 3
-      required: true
+      required: false
 
 - name: adduser
   description: add user to guild, user must be a valid League of Legends username
