--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -4,6 +4,6 @@ COPY requirements.txt ${LAMBDA_TASK_ROOT}
 
 RUN pip install -r requirements.txt
 
-COPY app/* ${LAMBDA_TASK_ROOT}
+COPY app/ ${LAMBDA_TASK_ROOT}
 
 CMD [ "main.handler" ]
