--- a/upload_commands/discord_commands.yaml
+++ b/upload_commands/discord_commands.yaml
@@ -3,6 +3,11 @@
 
 - name: setup
   description: create guild instance
+  options:
+  - name: webhook-url
+    description: channel webhook url
+    type: 3
+    required: true
 
 - name: reset
   description: reset instance
