--- a/upload_commands/discord_commands.yaml
+++ b/upload_commands/discord_commands.yaml
@@ -29,7 +29,7 @@
       required: true
 
 - name: deluser
-  description: deletes user from guild, user must be a valid League of Legends username and exist
+  description: delete user from guild, user must be a valid League of Legends username and exist
   options:
     - name: username
       description: League of Legends username
