--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zoe-bot",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "repository": "https://github.com/bryxli/zoe-bot.git",
   "author": "bryxli <bryanzero765@gmail.com>",
   "license": "MIT",
@@ -11,9 +11,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "cdk": "cdk",
-    "python": "python src/app.py",
-    "python3": "python3 src/app.py"
+    "cdk": "cdk"
   },
   "devDependencies": {
     "ts-node": "^10.9.1",
