--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-**/python/** linguist-vendored
-**/python/dynamo.py linguist-vendored=false
-**/python/league.py linguist-vendored=false
+python/** linguist-vendored=true
+python/dynamo.py linguist-vendored=false
+python/league.py linguist-vendored=false
