--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "*": "prettier --write"
   },
   "devDependencies": {
+    "@tsconfig/node18": "^18.2.2",
+    "aws-cdk-lib": "2.110.1",
+    "constructs": "10.3.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
     "sst": "^2.36.7",
-    "aws-cdk-lib": "2.110.1",
-    "constructs": "10.3.0",
-    "typescript": "^5.3.2",
-    "@tsconfig/node18": "^18.2.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   },
   "workspaces": [
     "packages/*"
