--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ permissions:
   contents: read # This is required for actions/checkout
 
 jobs:
-  DeployApp:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
