--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,16 @@ jobs:
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v3
+      - name: Copy config.json
+        run: |
+          cp configs/config.json $GITHUB_WORKSPACE/config.json
+        shell: bash
+      - name: Copy config-dev.json
+        run: |
+          cp configs/config-dev.json $GITHUB_WORKSPACE/config-dev.json
+      - name: Copy config-prod.json
+        run: |
+          cp configs/config-prod.json $GITHUB_WORKSPACE/config-prod.json
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
