--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,25 +16,30 @@ permissions:
   contents: read # This is required for actions/checkout
 
 jobs:
-  deploy:
+  upload-configs:
     runs-on: ubuntu-latest
     if: github.actor != 'dependabot[bot]'
     steps:
-      - name: debug
-        run: ls -R
-      - name: debug2
-        run: ls -R configs
+      - name: Create Archive
+        run: |
+          tar -czf configs.tar.gz -C configs .
       - name: Upload configs
         uses: actions/upload-artifact@v2
         with:
           name: configs
-          path: configs
+          path: configs.tar.gz
+  deploy:
+    runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]'
+    steps:
       - name: Git clone the repository
         uses: actions/checkout@v3
       - name: Download configs
         uses: actions/download-artifact@v2
         with:
           name: configs
+      - name: Extract Configs
+        run: tar -xzf $GITHUB_WORKSPACE/configs.tar.gz -C $GITHUB_WORKSPACE
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
