--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,10 +22,13 @@ jobs:
       AWS_REGION: ${{secrets.AWS_REGION}}
       RIOT_KEY: ${{secrets.RIOT_KEY}}
     steps:
+      - name: Create configs directory
+        run: mkdir -p configs
       - name: Create config.json
         run: |
           echo "{ \"aws_region\": \"$AWS_REGION\", \"riot_key\": \"$RIOT_KEY\" }" > configs/config.json
   create-config-dev:
+    needs: create-config
     environment: dev
     runs-on: ubuntu-latest
     env:
@@ -37,6 +40,7 @@ jobs:
         run: |
           echo "{ \"discord_public_key\": \"$DISCORD_PUBLIC_KEY\", \"application_id\": \"$APPLICATION_ID\", \"token\": \"$TOKEN\" }" > configs/config-dev.json
   create-config-prod:
+    needs: create-config
     environment: prod
     runs-on: ubuntu-latest
     env:
