--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -97,6 +97,7 @@ jobs:
           npm i
           if [ "${{ github.actor }}" == "dependabot[bot]" ]; then
             npx sst deploy --stage dependabot
+            npx sst remove --stage dependabot
           efif [ "${{ github.event_name }}" == "push" ]; then
             npx sst deploy --stage prod
           elif [ "${{ github.event_name }}" == "pull_request" ]; then
