--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,6 +66,10 @@ jobs:
           path: config-prod.json
 
   pre-deploy:
+    needs:
+      - create-config
+      - create-config-dev
+      - create-config-prod
     runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
@@ -94,11 +98,7 @@ jobs:
 
   deploy-dependabot:
     if: github.actor == 'dependabot[bot]' && github.event_name == 'pull_request'
-    needs:
-      - create-config
-      - create-config-dev
-      - create-config-prod
-      - pre-deploy
+    needs: pre-deploy
     runs-on: ubuntu-latest
     steps:
       - name: Deploy app for Dependabot
@@ -109,42 +109,20 @@ jobs:
 
   deploy-dev:
     if: github.actor != 'dependabot[bot]' && github.event_name == 'pull_request'
-    needs:
-      - create-config
-      - create-config-dev
-      - create-config-prod
-      - pre-deploy
+    needs: pre-deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy app for Dependabot
+      - name: Deploy app for dev
         run: |
           npm i
-          if [ "${{ github.actor }}" == "dependabot[bot]" ]; then
-            npx sst deploy --stage dependabot
-            npx sst remove --stage dependabot
-          elif [ "${{ github.event_name }}" == "push" ]; then
-            npx sst deploy --stage prod
-          elif [ "${{ github.event_name }}" == "pull_request" ]; then
-            npx sst deploy --stage dev
-          fi
+          npx sst deploy --stage dev
 
   deploy-prod:
     if: github.event_name == 'push'
-    needs:
-      - create-config
-      - create-config-dev
-      - create-config-prod
-      - pre-deploy
+    needs: pre-deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy app for Dependabot
+      - name: Deploy app for prod
         run: |
           npm i
-          if [ "${{ github.actor }}" == "dependabot[bot]" ]; then
-            npx sst deploy --stage dependabot
-            npx sst remove --stage dependabot
-          elif [ "${{ github.event_name }}" == "push" ]; then
-            npx sst deploy --stage prod
-          elif [ "${{ github.event_name }}" == "pull_request" ]; then
-            npx sst deploy --stage dev
-          fi
+          npx sst deploy --stage prod
