--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -122,6 +122,8 @@ jobs:
     needs: pre-deploy
     runs-on: ubuntu-latest
     steps:
+      - name: Git clone the repository
+        uses: actions/checkout@v3
       - name: Deploy app for prod
         run: |
           npm i
