--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,11 +65,8 @@ jobs:
           name: config-prod
           path: config-prod.json
 
-  pre-deploy:
-    needs:
-      - create-config
-      - create-config-dev
-      - create-config-prod
+  deploy-dependabot:
+    if: github.actor == 'dependabot[bot]' && github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
@@ -95,12 +92,6 @@ jobs:
           role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/GitHub
           role-duration-seconds: 3600 #adjust as needed for your build time
           aws-region: us-east-1 # TODO: update readme for auto deployment setup
-
-  deploy-dependabot:
-    if: github.actor == 'dependabot[bot]' && github.event_name == 'pull_request'
-    needs: pre-deploy
-    runs-on: ubuntu-latest
-    steps:
       - name: Deploy app for Dependabot
         run: |
           npm i
@@ -109,9 +100,31 @@ jobs:
 
   deploy-dev:
     if: github.actor != 'dependabot[bot]' && github.event_name == 'pull_request'
-    needs: pre-deploy
     runs-on: ubuntu-latest
     steps:
+      - name: Git clone the repository
+        uses: actions/checkout@v3
+      - name: Download config.json
+        uses: actions/download-artifact@v3
+        with:
+          name: config
+          path: configs
+      - name: Download config-dev.json
+        uses: actions/download-artifact@v3
+        with:
+          name: config-dev
+          path: configs
+      - name: Download config-prod.json
+        uses: actions/download-artifact@v3
+        with:
+          name: config-prod
+          path: configs
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/GitHub
+          role-duration-seconds: 3600 #adjust as needed for your build time
+          aws-region: us-east-1 # TODO: update readme for auto deployment setup
       - name: Deploy app for dev
         run: |
           npm i
@@ -119,9 +132,31 @@ jobs:
 
   deploy-prod:
     if: github.event_name == 'push'
-    needs: pre-deploy
     runs-on: ubuntu-latest
     steps:
+      - name: Git clone the repository
+        uses: actions/checkout@v3
+      - name: Download config.json
+        uses: actions/download-artifact@v3
+        with:
+          name: config
+          path: configs
+      - name: Download config-dev.json
+        uses: actions/download-artifact@v3
+        with:
+          name: config-dev
+          path: configs
+      - name: Download config-prod.json
+        uses: actions/download-artifact@v3
+        with:
+          name: config-prod
+          path: configs
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/GitHub
+          role-duration-seconds: 3600 #adjust as needed for your build time
+          aws-region: us-east-1 # TODO: update readme for auto deployment setup
       - name: Git clone the repository
         uses: actions/checkout@v3
       - name: Deploy app for prod
