--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,6 @@ on:
     branches:
       - "*"
 
-env:
-  AWS_ACCOUNT_ID: ${{secrets.AWS_ACCOUNT_ID}}
-
 # Concurrency group name ensures concurrent workflow runs wait for any in-progress job to finish
 concurrency:
   group: ${{ github.workflow }}
@@ -96,7 +93,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: arn:aws:iam::${{env.AWS_ACCOUNT_ID}}:role/GitHub
+          role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/GitHub
           role-duration-seconds: 3600 #adjust as needed for your build time
           aws-region: us-east-1 # TODO: update readme for auto deployment setup
       - name: Deploy app for Dependabot
