--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws-sdk": "^2.1513.0",
     "bootstrap": "^5.3.2",
     "next": "14.0.3",
     "react": "^18",
