--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "aws-sdk": "^2.1513.0",
+    "@aws-sdk/client-dynamodb": "^3.468.0",
+    "@aws-sdk/lib-dynamodb": "^3.468.0",
+    "@aws-sdk/util-dynamodb": "^3.468.0",
     "bootstrap": "^5.3.2",
     "next": "14.0.3",
     "react": "^18",
